DOC-10192: New Template Builder presets

--- a/en/template-builder/toc.yaml
+++ b/en/template-builder/toc.yaml
@@ -36,6 +36,8 @@ items:
             name: Image classification
           - href: templates/sbs-image.md
             name: Side-by-side image comparison
+          - href: templates/product-search-relevance.md
+            name: Product search relevance
       - name: Texts
         items:
           - href: templates/copywriting.md
