--- a/en/api/presets.yaml
+++ b/en/api/presets.yaml
@@ -1,41 +1,41 @@
 default:
-  requester: 'https://toloka.ai/docs/guide/?lang=en'
-  requester-access: 'https://toloka.ai/docs/guide/concepts/access.html?lang=en'
+  requester: 'https://toloka.ai/docs/guide/'
+  requester-access: 'https://toloka.ai/docs/guide/concepts/access.html'
   requester-attachments: 'https://toloka.ai/docs/guide/concepts/advanced-features-attach.html'
   requester-aggregations: 'https://toloka.ai/docs/guide/concepts/result-aggregation.html'
-  requester-aggregation: 'https://toloka.ai/docs/guide/concepts/result-aggregation.html?lang=en'
+  requester-aggregation: 'https://toloka.ai/docs/guide/concepts/result-aggregation.html'
   requester-js-class-task: 'https://toloka.ai/docs/guide/concepts/js/task.html'
   requester-result: 'https://toloka.ai/docs/guide/concepts/result-of-eval.html'
   requester-quality: 'https://toloka.ai/docs/guide/concepts/check-performers.html'
   requester-skills: 'https://toloka.ai/docs/guide/concepts/nav.html'
   requester-users: 'https://toloka.ai/docs/guide/concepts/users.html'
-  requester-pool-main: 'https://toloka.ai/docs/guide/concepts/pool-main.html?lang=en'
-  requester-main-steps: 'https://toloka.ai/docs/guide/concepts/main-steps.html?lang=en'
+  requester-pool-main: 'https://toloka.ai/docs/guide/concepts/pool-main.html'
+  requester-main-steps: 'https://toloka.ai/docs/guide/concepts/main-steps.html'
   requester-dynamic-pricing: >-
-    https://toloka.ai/docs/guide/concepts/dynamic-pricing.html?lang=en#dynamic-pricing__section_ucl_3hl_vlb
-  requester-task-upload: 'https://toloka.ai/docs/guide/concepts/task_upload.html?lang=en'
-  requester-train: 'https://toloka.ai/docs/guide/concepts/train.html?lang=en'
-  requester-result-aggregation: 'https://toloka.ai/docs/guide/concepts/result-aggregation.html?lang=en'
-  requester-troubleshooting: 'https://toloka.ai/docs/guide/troubleshooting/troubleshooting.html?lang=en'
+    https://toloka.ai/docs/guide/concepts/dynamic-pricing.html#dynamic-pricing__section_ucl_3hl_vlb
+  requester-task-upload: 'https://toloka.ai/docs/guide/concepts/task_upload.html'
+  requester-train: 'https://toloka.ai/docs/guide/concepts/train.html'
+  requester-result-aggregation: 'https://toloka.ai/docs/guide/concepts/result-aggregation.html'
+  requester-troubleshooting: 'https://toloka.ai/docs/guide/troubleshooting/troubleshooting.html'
   requester-support: >-
-    https://toloka.ai/docs/guide/troubleshooting/support.html/?lang=en#troubleshooting__project-setting
+    https://toloka.ai/docs/guide/troubleshooting/support.html/#troubleshooting__project-setting
   requester-image-annotation: >-
-    https://toloka.ai/docs/guide/concepts/t-components/image-annotation.html/?lang=en
-  requester-project-languages: 'https://toloka.ai/ru/docs/guide/concepts/project-languages.html?lang=en'
-  requester-bonus: 'https://toloka.ai/docs/guide/concepts/bonus.html?lang=en'
-  requester-ban: 'https://toloka.ai/docs/guide/concepts/ban.html?lang=en'
-  requester-prj: 'https://toloka.ai/docs/guide/concepts/project.html?lang=en'
-  requester-ban-platform: 'https://toloka.ai/docs/guide/concepts/ban.html?lang=en#ban__ban-platform'
+    https://toloka.ai/docs/guide/concepts/t-components/image-annotation.html/
+  requester-project-languages: 'https://toloka.ai/docs/guide/concepts/project-languages.html'
+  requester-bonus: 'https://toloka.ai/docs/guide/concepts/bonus.html'
+  requester-ban: 'https://toloka.ai/docs/guide/concepts/ban.html'
+  requester-prj: 'https://toloka.ai/docs/guide/concepts/project.html'
+  requester-ban-platform: 'https://toloka.ai/docs/guide/concepts/ban.html#ban__ban-platform'
   requester-interface-translate: >-
-    https://toloka.ai/docs/guide/concepts/project-languages.html?lang=en#project-languages__interface-translate
+    https://toloka.ai/docs/guide/concepts/project-languages.html#project-languages__interface-translate
   requester-messaging: 'https://toloka.ai/docs/guide/concepts/messaging.html#private'
   requester-help: >-
-    https://toloka.ai/docs/guide/troubleshooting/support.html?lang=en#troubleshooting__help
+    https://toloka.ai/docs/guide/troubleshooting/support.html#troubleshooting__help
   requester-profile-integration: 'https://toloka.yandex.com/requester/profile/integration'
   sandbox-requester-profile-integration: 'https://sandbox.toloka.yandex.com/requester/profile/integration'
   requester-mixing: >-
-    https://toloka.ai/docs/guide/concepts/distribute-tasks-by-pages.html?lang=en#distribute-tasks-by-pages__smart-mixing
-  requester-speed-quality-balance: 'https://toloka.ai/docs/guide/concepts/adjust.html?lang=en'
+    https://toloka.ai/docs/guide/concepts/distribute-tasks-by-pages.html#distribute-tasks-by-pages__smart-mixing
+  requester-speed-quality-balance: 'https://toloka.ai/docs/guide/concepts/adjust.html'
   sandbox-profile: 'https://sandbox.toloka.yandex.com/requester/profile'
   sandbox-requester: 'https://sandbox.toloka.yandex.com/requester'
   sandbox: 'https://sandbox.toloka.yandex.com'
@@ -54,11 +54,11 @@ default:
   iso-search: 'https://www.iso.org/obp/ui/#search'
   iso-lang: 'https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes'
   handlebarsjs-com: 'http://handlebarsjs.com/'
-  toloka-kit-doc: 'https://toloka.ai/docs/toloka-kit/'
+  toloka-kit-doc: 'https://toloka.ai/en/docs/toloka-kit/'
   tk-create-task: >-
-    https://toloka.ai/docs/toloka-kit/reference/toloka.client.TolokaClient.create_task
+    https://toloka.ai/en/docs/toloka-kit/reference/toloka.client.TolokaClient.create_task
   tk-create-tasks: >-
-    https://toloka.ai/docs/toloka-kit/reference/toloka.client.TolokaClient.create_tasks
+    https://toloka.ai/en/docs/toloka-kit/reference/toloka.client.TolokaClient.create_tasks
   tk-create-tasks-async: >-
     https://toloka.ai/en/docs/toloka-kit/reference/toloka.client.TolokaClient.create_tasks_async
   tk-create-tasks-suite: >-
