--- a/en/presets.yaml
+++ b/en/presets.yaml
@@ -11,9 +11,9 @@ default:
   wiki-ogg: 'https://en.wikipedia.org/wiki/Ogg'
   wiki-opus: 'https://en.wikipedia.org/wiki/Opus_(audio_format)'
   wiki-wav: 'https://en.wikipedia.org/wiki/WAV'
-  toloka-requester-index-dita: 'https://toloka.ai/ru/docs/guide/index.html?lang=en'
-  toloka-requester-concepts-yacloud-dita: 'https://toloka.ai/ru/docs/guide/concepts/use-object-storage.html?lang=en'
-  toloka-requester-create-tsv: 'https://toloka.ai/ru/docs/guide/concepts/pool_csv.html?lang=en'
+  toloka-requester-index-dita: 'https://toloka.ai/docs/guide/index.html'
+  toloka-requester-concepts-yacloud-dita: 'https://toloka.ai/docs/guide/concepts/use-object-storage.html'
+  toloka-requester-create-tsv: 'https://toloka.ai/docs/guide/concepts/pool_csv.html'
   template-builder: 'https://clck.ru/SMCHv'
   toloka-facebook: 'https://www.facebook.com/tolokaglobal/'
   toloka-slack: 'https://join.slack.com/t/tolokacommunity/shared_invite/zt-sxr745fr-dvfZffzvQTwNXOE0gEqysg'
@@ -3466,7 +3466,7 @@ default:
   ui_requester_pool_aggregation_more-link: More aggregations in Crowd-Kit
   ui_requester_pool_aggregation_more-tooltip: Aggregate and download results through
     the API
-  ui_requester_pool_aggregation_more-url: https://toloka.ai/docs/crowd-kit/
+  ui_requester_pool_aggregation_more-url: https://toloka.ai/en/docs/crowd-kit/
   ui_requester_pool_aggregation_wdo__popup_cancel: Cancel
   ui_requester_pool_aggregation_wdo__popup_fields: Output fields for aggregation
   ui_requester_pool_aggregation_wdo__popup_skill: Skill
@@ -5682,7 +5682,7 @@ default:
   ui_requester_qual_adj__avail_count: The task is available to &lt;1&gt; __amount__
     &lt;/1&gt; active user
   ui_requester_qual_adj__desc: Note that fewer users means slower pool completion
-  ui_requester_qual_adj__docLink: https://toloka.ai/docs/guide/concepts/adjust.html?lang=en
+  ui_requester_qual_adj__docLink: https://toloka.ai/docs/guide/concepts/adjust.html
   ui_requester_qual_adj__expl__avail: Tasks are available to &lt;strong&gt; __count__
     &lt;/strong&gt; active users
   ui_requester_qual_adj__expl__avail_zero: The task is not available for active users
@@ -6500,7 +6500,7 @@ default:
   ui_requester_wlcm-header: Let's get started
   ui_requester_wlcm-help: In case of difficulties
   ui_requester_wlcm-help-callsupport: Contact the Toloka team via %s
-  ui_requester_wlcm-help-readdocs: Read the &lt;a data-pass target="_blank" href="https://toloka.ai/ru/docs/guide/"&gt;documentation&lt;/a&gt;
+  ui_requester_wlcm-help-readdocs: Read the &lt;a data-pass target="_blank" href="https://toloka.ai/docs/guide/"&gt;documentation&lt;/a&gt;
   ui_requester_wlcm-help-support: Support
   ui_requester_wlcm-help-terminology: glossary
   ui_requester_wlcm-money: How to top up your account
