--- a/en/template-builder/toc.yaml
+++ b/en/template-builder/toc.yaml
@@ -38,6 +38,8 @@ items:
             name: Side-by-side image comparison
           - href: templates/product-search-relevance.md
             name: Product search relevance
+          - href: templates/object-recognition.md
+            name: Object recognition & detection
       - name: Texts
         items:
           - href: templates/copywriting.md
