--- a/ru/presets.yaml
+++ b/ru/presets.yaml
@@ -25,14 +25,14 @@ default:
   requester-instruction: https://toloka.ai/docs/guide/concepts/instruction.html
   requester-interface-translate: https://toloka.ai/docs/guide/concepts/project-languages.html#project-languages__interface-translate
   requester-js-class-task: https://toloka.ai/docs/guide/concepts/js/task.html
-  requester-main: https://toloka.yandex.com/for-requesters
+  requester-main: https://platform.toloka.ai/for-requesters
   requester-main-steps: https://toloka.ai/docs/guide/concepts/main-steps.html
   requester-messaging: https://toloka.ai/docs/guide/concepts/messaging.html#private
   requester-mixing: https://toloka.ai/docs/guide/concepts/distribute-tasks-by-pages.html#distribute-tasks-by-pages__smart-mixing
   requester-overlap: https://toloka.ai/docs/guide/concepts/overlap-faq.html
   requester-pool-main: https://toloka.ai/docs/guide/concepts/pool-main.html
   requester-prj: https://toloka.ai/docs/guide/concepts/project.html
-  requester-profile-integration: https://toloka.yandex.com/requester/profile/integration
+  requester-profile-integration: https://platform.toloka.ai/requester/profile/integration
   requester-project-languages: https://toloka.ai/ru/docs/guide/concepts/project-languages.html
   requester-proxy: https://toloka.ai/docs/guide/concepts/prepare-data.html#prepare-data__connect
   requester-quality: https://toloka.ai/docs/guide/concepts/check-performers.html
@@ -71,7 +71,7 @@ default:
   toloka-kit: https://github.com/Toloka/toloka-kit
   toloka-kit-doc: https://toloka.ai/en/docs/toloka-kit/
   toloka-linkedin: https://www.linkedin.com/company/toloka/
-  toloka-profile: https://toloka.yandex.ru/requester/profile
+  toloka-profile: https://platform.toloka.ai/ru/requester/profile
   toloka-requester-concepts-yacloud-dita: https://toloka.ai/ru/docs/guide/concepts/use-object-storage.html
   toloka-requester-create-tsv: https://toloka.ai/ru/docs/guide/concepts/pool_csv.html
   toloka-requester-index-dita: https://toloka.ai/ru/docs/guide/index.html
