DOC-11227: Added regions list and fixed links

--- a/en/_includes/toloka-api-toc.yaml
+++ b/en/_includes/toloka-api-toc.yaml
@@ -155,6 +155,9 @@ items:
             href: ../api/concepts/filter-computed.md
           - name: Filter by skills
             href: ../api/concepts/filter-skill.md
+          - name: Regions and their codes
+            href: ../api/concepts/regions.md
+            hidden: true
       - name: Block access to tasks
         items:
           - name: Overview
