--- a/ru/presets.yaml
+++ b/ru/presets.yaml
@@ -39,7 +39,7 @@ default:
   requester-refill: https://toloka.ai/docs/guide/concepts/refill.html
   requester-result: https://toloka.ai/docs/guide/concepts/result-of-eval.html?
   requester-result-aggregation: https://toloka.ai/docs/guide/concepts/result-aggregation.html
-  requester-sandbox: https://sandbox.toloka.yandex.com/for-requesters
+  requester-sandbox: https://platform.sandbox.toloka.ai/for-requesters
   requester-skills: https://toloka.ai/docs/guide/concepts/nav.html
   requester-skills-global: https://toloka.ai/docs/guide/concepts/nav-cross-project.html
   requester-solution-architecture: https://toloka.ai/docs/guide/concepts/solution-architecture.html
@@ -51,10 +51,10 @@ default:
   requester-users: https://toloka.ai/docs/guide/concepts/users.html
   rfc4122: https://tools.ietf.org/html/rfc4122
   sandbox: https://sandbox.toloka.yandex.com
-  sandbox-profile: https://sandbox.toloka.yandex.com/requester/profile
-  sandbox-requester: https://sandbox.toloka.yandex.com/requester
-  sandbox-requester-profile-integration: https://sandbox.toloka.yandex.com/requester/profile/integration
-  sandbox-workers: https://sandbox.toloka.yandex.com/requester/workers
+  sandbox-profile: https://platform.sandbox.toloka.ai/requester/profile
+  sandbox-requester: https://platform.sandbox.toloka.ai/requester
+  sandbox-requester-profile-integration: https://platform.sandbox.toloka.ai/requester/profile/integration
+  sandbox-workers: https://platform.sandbox.toloka.ai/requester/workers
   tb-help: https://toloka.ai/docs/template-builder/index.html/
   template-builder: https://clck.ru/SMCHv
   tk-create-task: https://toloka.ai/en/docs/toloka-kit/reference/toloka.client.TolokaClient.create_task
